Complete HTML CSS Website

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil officia et autem quo cum, quaerat magnam praesentium repellat, in qui, debitis quam est obcaecati eveniet assumenda! Quos perspiciatis soluta odit!</p>
+                    <p>For engagements in terms of short term or longterm projects, feel free to reach me through the contact details below. I'm open for any kind of exiting project that will creat real change in the society as well as help build my skills beyond what I know today.</p>
                     <div class="icons">
                         <div class="row">
                            <i class="fas fa-user"></i> 
